created class to send e-mail

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,15 @@ DATABASE_PORT=5432
 DATABASE_SCHEMA=manager
 DATABASE_USER=postgres
 DATABASE_PASS=password
+
+#Email From
+EMAIL_NAME_SERVICE=your-name-service
+EMAIL_FROM=your-email@your-email.com
+EMAIL_FROM_NAME=your-name
+EMAIL_SMTP=your-smtp
+EMAIL_PORT=your-poty
+EMAIL_USER=your-user
+EMAIL_PASS=your-password
+
+#Email To Daily Message
+EMAIL_TO_DAILY_MESSAGE=email-destiny@email-destiny.com
