--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "nodemailer": "^6.9.4",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "pluralize": "8.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -41,7 +42,7 @@
     "@types/cron": "^2.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/node": "18.17.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
